Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54786

Pasting non English Languages from GTK to Qt results in wrong paste

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.13.0 Alpha 1
    • 5.6.2, 5.7.0, 5.8, 5.10.0, 5.12.0
    • QPA: Wayland
    • None
    • 589a01ff6b1eacf81e74a5fc4801572135214f43 (qt/qtbase/wip/qt6)

      Tested in weston and enlightenment

      To reproduce:

      Open a GTK app (ie transmission-gtk) type something in ie greek Copy and paste it in a Qt app text field. Weird characters are pasted.

      Results in the pic you see in the attachment.

      Related discussion:
      https://phab.enlightenment.org/T3972
      https://bugzilla.gnome.org/show_bug.cgi?id=768803

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            johanhelsing Johan Helsing
            apb Ap B
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes