QMimeData: Prefer UTF-8 when multiple charsets are available

This was especially a problem on Wayland where both "text/plain" (us-ascii) and
"text/plain;charset=utf-8" are typically available. I.e. we would prefer ascii
over utf-8, losing special characters.

Fixes: QTBUG-54786
Change-Id: I985f66e16fcd5125e800c86c4d3949d210e939ba
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>